# onnx-rust-binding

./: .gitignore  .gitmodules  README.md
calib_table_generator/: .gitignore  README.md  main.py
calib_table_generator/CSPDarkNet53/: calibration.cache  calibration.flatbuffers  calibration.json
calib_table_generator/f32_models/CSPDarkNet53/: calibration.flatbuffers
calib_table_generator/f32_models/DLA169/: calibration.flatbuffers
calib_table_generator/f32_models/FCNResNet50/: calibration.flatbuffers
calib_table_generator/f32_models/RegNetX_64GF/: calibration.flatbuffers
calib_table_generator/f32_models/SEResNeXt101_32x4d/: calibration.flatbuffers
onnx_model_executor/: .gitignore  Cargo.toml  README.md
onnx_model_executor/CSPDarkNet53_f32_cache/: calibration.cache  calibration.flatbuffers  calibration.json
onnx_model_executor/src/: main.rs
