[package]
name = "onnx_model_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
ORT_USE_CUDA = 1
LD_LIBRARY_PATH = "/home/ubuntu/haechan.an/onnx_rust_binding/test_trt/TensorRT-8.4.1.5/lib"


[dependencies]
onnxruntime-sys = { git = "https://github.com/AnHaechan/onnxruntime-rs.git", branch="hydraflow_inner" }